--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,12 +7,15 @@
         "callsign",
         "horiz",
         "Horiz",
+        "Karte",
         "KJFK",
         "KLAX",
         "lamax",
         "lamin",
         "lomin",
+        "memomaps",
         "opensky",
+        "OPNV",
         "pydantic",
         "pytest",
         "pythonpath",
