--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ classifiers = [
 dependencies = [
     "aiohttp==3.11.18",
     "asyncio==3.4.3",
+    "async-lru==2.0.5",
+    "python-fasthtml==0.12.18",
     "folium==0.19.6",
     "nest-asyncio==1.6.0",
     "panel==1.7.0",
