using realtime updates

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,26 +1,47 @@
 {
     "cSpell.words": [
         "addopts",
+        "adsb",
+        "Adsb",
+        "ADSB",
+        "adsbexchange",
         "aiohttp",
+        "aircrafts",
+        "alru",
+        "ASTERIX",
         "asyncio",
         "baro",
+        "bokeh",
         "callsign",
+        "fastapi",
         "fasthtml",
+        "FLARM",
+        "hexdb",
         "horiz",
         "Horiz",
+        "jmespath",
         "Karte",
         "KJFK",
         "KLAX",
         "lamax",
         "lamin",
+        "latlng",
         "lomin",
         "memomaps",
+        "mlat",
+        "multilateration",
         "opensky",
         "OPNV",
+        "ptime",
         "pydantic",
         "pytest",
         "pythonpath",
+        "Rotorcraft",
+        "rssi",
         "setuptools",
-        "testpaths"
+        "testpaths",
+        "tisb",
+        "updatetime",
+        "uvicorn"
     ]
 }
