--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,13 +21,16 @@ dependencies = [
     "aiohttp==3.11.18",
     "asyncio==3.4.3",
     "async-lru==2.0.5",
+    "bokeh-fastapi==0.1.4",
+    "fastapi==0.115.12",
     "jmespath==1.0.1",
     "python-fasthtml==0.12.18",
     "folium==0.19.6",
     "nest-asyncio==1.6.0",
     "panel==1.7.0",
     "pydantic==2.11.4",
-    "pydantic-settings==2.9.1"
+    "pydantic-settings==2.9.1",
+    "uvicorn==0.34.2"
 ]
 
 [project.optional-dependencies]
