using realtime updates

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,12 +26,15 @@
         "lamax",
         "lamin",
         "latlng",
+        "Lngs",
         "lomin",
         "memomaps",
         "mlat",
         "multilateration",
         "opensky",
         "OPNV",
+        "popupclose",
+        "popupopen",
         "ptime",
         "pydantic",
         "pytest",
