--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "bokeh-fastapi==0.1.4",
     "fastapi==0.115.12",
     "folium==0.19.6",
+    "itsdangerous==2.2.0",
     "nest-asyncio==1.6.0",
     "panel==1.7.0",
     "pydantic==2.11.4",
@@ -43,6 +44,15 @@ test = [
 [tool.setuptools.packages.find]
 where = ["src"]
 exclude = ["tests*"]
+
+[tool.setuptools.package-data]
+"local_flight_map.ui.panel" = [
+    "static/*",
+    "static/**/*"
+]
+"local_flight_map.ui.folium" = [
+    "js/*"
+]
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
