--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "Adsb",
         "ADSB",
         "adsbexchange",
+        "Aerogrid",
         "aiohttp",
         "aircrafts",
         "alru",
@@ -18,6 +19,7 @@
         "fastapi",
         "fasthtml",
         "FLARM",
+        "Getmapping",
         "hexdb",
         "horiz",
         "Horiz",
@@ -35,6 +37,7 @@
         "multilateration",
         "opensky",
         "OPNV",
+        "opnvkarte",
         "popupclose",
         "popupopen",
         "ptime",
@@ -46,9 +49,11 @@
         "sarumaj",
         "Segoe",
         "setuptools",
+        "spiderfy",
         "testpaths",
         "tisb",
         "updatetime",
+        "USGS",
         "uvicorn",
         "venv"
     ]
