--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,12 +21,10 @@ dependencies = [
     "aiohttp==3.11.18",
     "asyncio==3.4.3",
     "async-lru==2.0.5",
-    "bokeh-fastapi==0.1.4",
     "fastapi==0.115.12",
     "folium==0.19.6",
     "itsdangerous==2.2.0",
     "nest-asyncio==1.6.0",
-    "panel==1.7.0",
     "pydantic==2.11.4",
     "pydantic-settings==2.9.1",
     "uvicorn==0.34.2"
@@ -46,12 +44,12 @@ where = ["src"]
 exclude = ["tests*"]
 
 [tool.setuptools.package-data]
-"local_flight_map.ui.panel" = [
+"local_flight_map.ui.app" = [
     "static/*",
     "static/**/*",
     "interface.js"
 ]
-"local_flight_map.ui.folium" = [
+"local_flight_map.ui.plugins" = [
     "js/*.js"
 ]
 
