--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,13 +23,16 @@
         "hexdb",
         "horiz",
         "Horiz",
+        "itsdangerous",
         "jmespath",
+        "jscode",
         "Karte",
         "KJFK",
         "KLAX",
         "lamax",
         "lamin",
         "latlng",
+        "levelname",
         "Lngs",
         "lomin",
         "memomaps",
@@ -40,6 +43,7 @@
         "opensky",
         "OPNV",
         "opnvkarte",
+        "orjson",
         "popupclose",
         "popupopen",
         "ptime",
