--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "folium==0.19.6",
     "itsdangerous==2.2.0",
     "nest-asyncio==1.6.0",
+    "orjson==3.10.18",
     "pydantic==2.11.4",
     "pydantic-settings==2.9.1",
     "uvicorn==0.34.2"
