--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,5 +57,6 @@ jobs:
         env:
           HD_ADSBEXCHANGE_API_KEY: ${{ secrets.ADSBEXCHANGE_API_KEY }}
           HD_DATA_PROVIDER: ${{ secrets.DATA_PROVIDER }}
+          HD_MAP_REFRESH_INTERVAL: ${{ secrets.MAP_REFRESH_INTERVAL }}
           HD_OPENSKY_CLIENT_ID: ${{ secrets.OPENSKY_CLIENT_ID }}
           HD_OPENSKY_CLIENT_SECRET: ${{ secrets.OPENSKY_CLIENT_SECRET }}
