--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "Aerogrid",
         "aiohttp",
         "aircrafts",
+        "akhileshns",
         "alru",
         "ASTERIX",
         "asyncio",
@@ -20,12 +21,14 @@
         "fasthtml",
         "FLARM",
         "Getmapping",
+        "healthcheck",
         "hexdb",
         "horiz",
         "Horiz",
         "itsdangerous",
         "jmespath",
         "jscode",
+        "justlogin",
         "Karte",
         "KJFK",
         "KLAX",
@@ -48,10 +51,13 @@
         "popupopen",
         "ptime",
         "pydantic",
+        "pyproject",
         "pytest",
         "pythonpath",
+        "rollbackonhealthcheckfailed",
         "Rotorcraft",
         "rssi",
+        "rtrimstr",
         "sarumaj",
         "Segoe",
         "setuptools",
@@ -59,6 +65,7 @@
         "testpaths",
         "tisb",
         "updatetime",
+        "usedocker",
         "USGS",
         "uvicorn",
         "venv"
